[update] mengubah /news menjadi /news/home, menambahkan /news sebagai endpoint pencarian
